Change seller registration

--- a/src/app/seller-registration/seller-registration.component.html
+++ b/src/app/seller-registration/seller-registration.component.html
@@ -31,11 +31,11 @@
         <div class="dot">✔</div>
         Основні дані
       </li>
-      <li [ngClass]="{'current': (this.mode === 3)}">
-        <div class="number">3</div>
-        <div class="dot">✔</div>
-        Налаштування
-      </li>
+<!--      <li [ngClass]="{'current': (this.mode === 3)}">-->
+<!--        <div class="number">3</div>-->
+<!--        <div class="dot">✔</div>-->
+<!--        Налаштування-->
+<!--      </li>-->
     </ul>
   </div>
 
@@ -110,7 +110,8 @@
                 class="validation-text">Будь ласка оберіть країну зі списку</span>
         </div>
         <div>
-          <button class="andro-button" (click)="sellerDataButtonClick()">Перейти до налаштувань</button>
+<!--          <button class="andro-button" (click)="sellerDataButtonClick()">Перейти до налаштувань</button>-->
+          <button class="andro-button" (click)="sellerDataButtonClick()">Завершити та перейти у мій профіль</button>
         </div>
       </div>
     </div>
